# trackside-telemetry

./: .gitignore  Dockerfile  TEMPLATE.sh  configurations.env  docker-compose.yml  pyproject.toml  readme.md  readme.md.txt  readme.txt  requirements.txt  sensor_ids.txt  test.csv  trackside.ini  xbee-reciever.py
Vehicle-Telemetry-Module-Software/: Coord_Streamer.py  PI_CLI_App  Streamer  SystemMonitor  TracksideLogger.py  coordinator-streamer  driver.py  system-logger.py
datalogger/scripts/: InfluxWriter.py
docker/: Dockerfile  requirements.txt
dummy_data/old/: extern_sender.py
src/: InfluxWriter.py  SystemMonitor.py  TracksideLogger.py
src/old/: xbee-reciever-OLD.py
system_logger/: system-logger.py
trackside/: DLMSimulator.py  InfluxWriter.py  InfluxWriterTemp.py  TracksideLogger.py  __init__.py  credentials.json  csv_to_influx.py  dlm_data_20210413_004735.gdat  main.py  playground.py  quickstart.py  reader.py  reciever.py  sender.py  sender2.py  test.py  test2.py  test3.py  token.json  track_test.ipynb  trackside.py  utils.py  write_to_db.py
trackside/data/: dyno-can-config.yaml  go4-22c.yaml  sensors.yaml  test.yaml
trackside/old/: dummy_telem_data.txt
trackside/tests/: tests.py
