[tool.poetry]
name = "trackside"
version = "0.9.1"
description = "Trackside Telemetry for Gopher Motorsports"
authors = ["Anton King <https://github.com/antonsking>"]
license = "MIT"
packages = [
    { include = "trackside" }
]

[tool.poetry.dependencies]
python = "^3.7"
configparser = "^5.2.0"
influxdb = "^5.3.1"
pyserial = "^3.5"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trackside = "trackside.reciever:reciever"

